--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Awakening
-Theme URI: http://www.opencodez.com/theme/awakening
+Theme URI: http://www.opencodez.com/free-themes/awakening
 Author: Opencodez Team
 Author URI: http://www.opencodez.com
 Description: The Awakening theme for WordPress is a fully responsive theme developed on top of <a href="http://foundation.zurb.com/">Foundation Framework</a> that looks great on any device. Features include 6 different layouts for posts and pages, nicely designed and customizable footer with its own widgets. In addition to this the theme comes with pre-installed widgets for Google Custom Search Engine, Feedburner, Archives, Category. Place them anywhere you want.
